@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.562 2004-05-01 18:27:35 castaglia Exp $
+$Id: NEWS,v 1.563 2004-05-02 05:42:18 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -11,6 +11,7 @@ CVS
   stated that <Class> sections are matched in order of definition, but the
   code has the match order in the reverse order of definition.
 - Bug 2401 - MaxClientsPerClass only checks first directive in config file.
+- Bug 2399 - Rename start/stop control actions to up/down.
 
 1.2.10rc1 - Released 28-Apr-2004
 ---------------------------------
